Fixed table alignment and renamed some variables

--- a/src/components/Note-folder/Note-comp/Note.css
+++ b/src/components/Note-folder/Note-comp/Note.css
@@ -5,7 +5,7 @@
     margin-bottom: 0;
 }
 
-.note-text-area {
+.note-content-area {
     height: 275px;
     width: 100%;
     padding: 1em;
@@ -21,7 +21,7 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
-    .note-text-area:hover {
+    .note-content-area:hover {
         outline: 1px solid red;
     }
 
@@ -33,44 +33,52 @@
         margin: 0;
     }
     
-    .note-text-area > th, tr, td {
+    .note-content-area > th, tr, td {
         border: 1px solid black;
         overflow-wrap: break-word;
     }
     
-    .note-text-area > table, .note-text-area > figure > table {
+    .note-content-area table {
         margin: 0;
         border-collapse: collapse;
         overflow-wrap: break-word;
     }
 
-    .note-text-area > figure.image {
+    .note-content-area figure.table-left-or-right {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .note-content-area figure.table-center {
+        margin: 15px auto;
+    }
+
+    .note-content-area > figure.image {
         padding: 0;
         margin: 0;
         margin-block: 0;
         margin-inline: 0;
     }
 
-    .note-text-area > figure.image-style-side {
+    .note-content-area > figure.image-style-side {
         float: right;
     }
 
-    .note-text-area > figure.image-style-center {
+    .note-content-area > figure.image-style-center {
         margin: 0 auto;
         left: 0;
         right: 0;
     }
 
-    .note-text-area > figure > img { 
+    .note-content-area > figure > img { 
         width: 100%;
+    }
+
+    .note-content-area img { 
         max-width: 100%;
     }
 
-    .note-text-area > p > img { 
-        max-width: 100%;
-    }
-
-    .note-text-area > blockquote {
+    .note-content-area > blockquote {
         background: #f9f9f9;
         border-left: 10px solid #ccc;
         margin: 1.5em 10px;
@@ -78,7 +86,7 @@
         quotes: "\201C""\201D""\2018""\2019";
     }
 
-        .note-text-area > blockquote:before {
+        .note-content-area > blockquote:before {
             color: #ccc;
             content: open-quote;
             font-size: 4em;
@@ -87,25 +95,25 @@
             vertical-align: -0.4em;
         }
 
-        .note-text-area > blockquote p {
+        .note-content-area > blockquote p {
             display: inline;
         }
 
-        .note-text-area > ol {
+        .note-content-area > ol {
             padding: 0;
             padding-left: 1em;
         }
 
-        .note-text-area > ul.normal-ul-list {
+        .note-content-area > ul.normal-ul-list {
             padding: 0;
             padding-left: 1em;
         }
 
-        .note-text-area > ul.todo-list {
+        .note-content-area > ul.todo-list {
             padding: 0;
         }
 
-        .note-text-area > ul.todo-list > li {
+        .note-content-area > ul.todo-list > li {
             list-style: none;
         }
 
